--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,253 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: "Poppins", sans-serif; background-color: #000000; width: 100%; position: relative;}
+
+body { 
+    margin: 0; font-family: 'Poppins', sans-serif !important;
+    overflow: hidden;
+    position: relative;
+    color: white;
+    padding: 0;
+    /* background-image: linear-gradient(rgba(255,255,255,0.5), rgba(255,255,255,0.5)); */
+    background-color: #171A20;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
+    overflow-y: scroll;
+}
+
+.gradient-container {
+    /* position: relative; */
+    /* height: 100%; */
+  }
+
+.gradient {
+    position: absolute;
+    top: 0;
+    width: 40vw;
+    height: 100%;
+    background-image: url('./assets/image.png'); /* Add your image path here */
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: fadeInOut 6s infinite alternate;
+  }
+
+.gradient-left-1 {
+    left: -15vw;
+    /* top: 15vh; */
+  }
+.gradient-left-2 {
+    left: -7vw;
+    /* top: 10vh; */
+}
+
+.gradient-left-3 {
+    left: -12vw;
+    top: 20vh;
+}
+
+.gradient-left-4 {
+    left: -10vw;
+    top: 30vh;
+  }
+
+.gradient-left-5 {
+    /* left: -7vw; */
+    top: 20vh;
+  }
+
+.gradient-right-1 {
+    /* position: absolute; */
+    right: -15vw;
+    transform: scaleX(-1);
+    transform: rotate(45deg);
+    animation: fadeInOut2 6s infinite alternate;
+}
+
+.gradient-right-2 {
+    /* position: absolute; */
+    right: -12vw;
+    transform: scaleX(-1);
+    transform: rotate(45deg);
+    animation: fadeInOut2 6s infinite alternate;
+}
+
+.gradient-right-3 {
+    /* position: absolute; */
+    right: -15vw;
+    transform: scaleX(-1);
+    transform: rotate(45deg);
+    animation: fadeInOut2 6s infinite alternate;
+}
+
+.gradient-right-4 {
+    /* position: absolute; */
+    right: -1vw;
+    transform: scaleX(-1);
+    transform: rotate(45deg);
+    animation: fadeInOut2 6s infinite alternate;
+}
+
+.blue {
+    mix-blend-mode: screen;
+    position: absolute;
+    z-index: 1;
+}
+
+@keyframes fadeInOut {
+    0% {
+        transform: translate(10%);;
+    }
+    100% {
+        transform: translateY(-5%);
+    }
+}
+
+@keyframes fadeInOut2 {
+    0% {
+        transform: translate(15%);;
+    }
+    100% {
+        transform: translateY(5%);
+    }
+}
+
+.navbar {
+    background-color: transparent;
+    padding: 1rem;
+    overflow: hidden;
+    z-index: 1001;
+    position: absolute;
+    right: 0;
+}
+  
+  .navbar ul {
+    list-style: none;
+    display: flex;
+    /* justify-content: space-around; */
+    float: right;
+  }
+  
+  .navbar li {
+    margin: 0 0.75rem;
+  }
+  
+  .navbar a {
+    color: #a7a9be;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.2em;
+    font: 400 1.2em Inter-Regular, sans-serif;
+  }
+  
+  .navbar a:hover {
+    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    color: white;
+    cursor: pointer;
+
+  }
+  
+.name {
+    position: relative;
+    z-index: 99;
+    margin: 0 auto;
+    max-width: 560px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    justify-content: center;
+}
+
+.icon-button {
+    display: inline-block;
+    margin: 6px;
+    padding: 12px 20px;
+    border-radius: 55%;
+    font-size: 24px;
+    text-align: center;
+    color: white;
+    background-color: #171A20 !important;
+    transition: background-color 0.3s;
+    border: 2px solid white;
+    /* background: linear-gradient(to bottom, #7a7b8a 0, #7a7b8a 100%); */
+  }
+
+  .icon-button:hover {
+    border: 2px solid #37bfec;
+    background-color: #37bfec !important;
+    transition: all .5s cubic-bezier(.35,0,.65,1);
+  }
+
+  /* .linkedin { background-color: #0077B5; }
+  .github { background-color: #333; }
+  .gitlab { background-color: #FC6D26; }
+  .cv { background-color: #28a745; } Adjust for a custom CV icon */
+
+  .icon-button i {
+    line-height: 1;
+  }
+
+
+  .blue-color{
+    color: #37bfec
+  }
+
+
+.about-me{
+    /* background: #0e0e0f; */
+    border-radius: 20px;
+    box-shadow: 0 10px 50px -20px #37bfec;
+    overflow: hidden;
+    padding: 10px 20px;
+    position: relative;
+    z-index: 3;
+
+    position: relative;
+    z-index: 99;
+    margin: 0 auto;
+    max-width: 1000px;
+    /* text-align: center; */
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    height: 80%;
+    justify-content: center;
+}
+
+hr {
+    color: white;
+    width: 100%;
+    background: white;
+}
+
+.company{
+    display: flex;
+    align-items: center;
+    justify-content: space-between
+}
+
+h4 {
+    margin: 2px;
+}
+
+.gray-color{
+color: #a7a9be;
+}
+
+.regular-font{
+    font: 400 1em Inter-Regular, sans-serif;
+}
+
+.company-name:hover{
+    color: #37bfec !important;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.container{
+    margin-bottom: 30px;
+}
